# WebSite

./: .env  .env.example  .gitignore  API_Documentation.md  APP_MANAGEMENT_LICENSE_INTEGRATION.md  AUTH_COMPLETE.md  AUTH_JAVA_API_KEY_SYSTEM.md  AUTH_JAVA_COMPILATION_FIXES.md  AUTH_JAVA_COMPLETE_GUIDE.md  AUTH_JAVA_COMPLETE_SUMMARY.md  AUTH_JAVA_ENHANCEMENTS.md  AUTH_JAVA_FIX_LICENSE_KEY.md  AUTH_JAVA_UPDATE_SUMMARY.md  AdiCheats.cs  Auth.java  Auth_Android_Implementation.md  CACHE_FIX_COMPLETE.md  ENV_SETUP_SUMMARY.md  ERROR_FIXES_COMPLETE.md  ERROR_HANDLING_IMPROVEMENTS.md  ERROR_HANDLING_QUICK_GUIDE.md  FIXED_COMPLETE.md  FIXES_SUMMARY.md  GITHUB_BACKEND_MIGRATION.md  GITHUB_SETUP_GUIDE.md  GIT_COMMANDS.md  GIT_PUSH.md  HWID_COLUMN_FINAL.md  HWID_LOCK_FIX_SUMMARY.md  HWID_LOCK_FRONTEND_FIX.md  HWID_LOCK_QUICK_REFERENCE.md  HWID_UI_IMPROVEMENTS.md  JAVA_LICENSE_QUICK_START.md  LICENSE_ERROR_FIXES.md  LICENSE_KEY_REQUIRED_FIX.md  LICENSE_QUICK_START.md  LICENSE_SYSTEM_BEFORE_AFTER.md  LICENSE_SYSTEM_COMPLETE.md  LICENSE_SYSTEM_README.md  LICENSE_SYSTEM_SUMMARY.md  (+32 more)
client/example/: CMakeLists.txt  FILE_OVERVIEW.md  MIGRATION_FROM_KEYAUTH.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  START_HERE.md  VISUAL_STUDIO_SETUP.txt  auth keyauth example.hpp  auth.hpp  login_example.cpp
client/src/: App.tsx  index.css
client/src/components/: header.tsx
client/src/lib/: auth.ts  firebase.ts  queryClient.ts
client/src/pages/: app-management.tsx  dashboard.tsx  license-keys.tsx  simple-login.css  simple-login.tsx
client/src/utils/: logoutHandler.ts
server/: auth.ts  environment.ts  githubService.ts  index.ts  licenseService.ts  routes.ts  storage.ts  types.ts  webhookService.ts
testsprite_tests/: DIAGNOSTIC_REPORT.md  standard_prd.json  testsprite_frontend_test_plan.json
